--- a/.gitignore
+++ b/.gitignore
@@ -17,5 +17,10 @@
 !/log/.keep
 !/tmp/.keep
 
+/node_modules
+/app/frontend/node_modules
+/app/frontend/yarn.lock
+/npm-debug.log
+
 # Ignore Byebug command history file.
 .byebug_history
