--- a/app/frontend/.eslintrc
+++ b/app/frontend/.eslintrc
@@ -26,12 +26,23 @@
     "no-underscore-dangle": 0,
     "no-alert": 1,
     "no-lone-blocks": 0,
+    "object-curly-spacing": [1, "always"],
+    "array-bracket-spacing": [1, "never"],
+    "template-curly-spacing": [1, "never"],
+    "key-spacing": [1, { "beforeColon": false, "afterColon": true }],
+    "comma-spacing": [2, { "before": false, "after": true }],
+    "space-in-parens": [1, "never"],
+    "keyword-spacing": [1, { "before": true, "after": true }],
+    "semi-spacing": [1, { "before": false, "after": false }],
+    "space-before-function-paren": [2, "never"],
+    "space-before-blocks": [1, "always"],
+    "spaced-comment": [2, "always", { "exceptions": ["-"] }],
     "jsx-quotes": 1,
     "react/display-name": [ 1, {"ignoreTranspilerName": false }],
     "react/forbid-prop-types": [1, {"forbid": ["any"]}],
     "react/jsx-boolean-value": 1,
     "react/jsx-closing-bracket-location": 0,
-    "react/jsx-curly-spacing": 0,
+    "react/jsx-curly-spacing": [1, "always"],
     "react/jsx-indent-props": 0,
     "react/jsx-key": 1,
     "react/jsx-max-props-per-line": 0,
