--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -4,8 +4,8 @@
     "clean": "rimraf ./../assets/javascripts/bundle.js",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
     "build": "npm run clean && npm run build:webpack",
-    "start": "node devServer.js",
-    "test": "mocha --compilers js:babel-core/register './tests/*/*.spec.@(js|jsx)'",
+    "start": "parallelshell \"node devServer.js\" \"npm run test:watch\"",
+    "test": "karma start",
     "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
@@ -21,13 +21,26 @@
     "babel-preset-stage-1": "^6.16.0",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
+    "enzyme": "2.4.1",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "4.0.0",
     "eventsource-polyfill": "^0.9.6",
     "expect": "^1.20.2",
     "express": "^4.13.4",
+    "factory-girl": "^2.2.2",
     "file-loader": "^0.8.5",
+    "karma": "1.3.0",
+    "karma-chai": "0.1.0",
+    "karma-chai-plugins": "0.8.0",
+    "karma-chrome-launcher": "2.0.0",
+    "karma-cli": "1.0.1",
+    "karma-firefox-launcher": "1.0.0",
+    "karma-mocha": "1.1.1",
+    "karma-mocha-reporter": "2.2.0",
+    "karma-safari-launcher": "1.0.0",
+    "karma-sourcemap-loader": "0.3.7",
+    "karma-webpack": "1.8.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
     "mocha": "^3.1.2",
