--- a/app/frontend/.eslintrc
+++ b/app/frontend/.eslintrc
@@ -27,8 +27,9 @@
     "no-alert": 1,
     "no-lone-blocks": 0,
     "object-curly-spacing": [1, "always"],
+    "comma-dangle": [2, "never"],
     "array-bracket-spacing": [1, "never"],
-    "template-curly-spacing": [1, "never"],
+    "template-curly-spacing": [1, "always"],
     "key-spacing": [1, { "beforeColon": false, "afterColon": true }],
     "comma-spacing": [2, { "before": false, "after": true }],
     "space-in-parens": [1, "never"],
