--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -9,6 +9,7 @@
     "test:watch": "npm test -- --watch"
   },
   "devDependencies": {
+    "autoprefixer": "^6.5.4",
     "babel-cli": "^6.16.0",
     "babel-core": "^6.17.0",
     "babel-eslint": "^7.0.0",
@@ -46,6 +47,8 @@
     "mocha": "^3.1.2",
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
+    "parallelshell": "^2.0.0",
+    "postcss-loader": "^1.2.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.1",
@@ -53,20 +56,20 @@
     "redux-devtools-dock-monitor": "^1.0.1",
     "redux-devtools-log-monitor": "^1.0.4",
     "rimraf": "^2.5.2",
-    "sass-loader": "^3.2.0",
+    "sass-loader": "^4.0.2",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.6",
+    "webpack": "2.1.0-beta.25",
     "webpack-dev-middleware": "^1.6.1",
     "webpack-hot-middleware": "^2.12.2",
-    "yarn": "^0.15.1"
+    "yarn": "^0.17.10"
   },
   "dependencies": {
-    "es6-promise": "^3.0.2",
-    "isomorphic-fetch": "^2.1.1",
+    "es6-promise": "^4.0.5",
+    "isomorphic-fetch": "^2.2.1",
     "nprogress": "^0.2.0",
-    "react": "15.3.2",
-    "react-dom": "15.3.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-redux": "^4.4.5",
     "react-router": "^2.8.1",
     "redux": "^3.6.0",
