--- a/app/frontend/package.json
+++ b/app/frontend/package.json
@@ -3,10 +3,11 @@
   "scripts": {
     "clean": "rimraf ./../assets/javascripts/bundle.js",
     "build:webpack": "NODE_ENV=production webpack --config webpack.config.prod.js",
-    "build": "npm run clean && npm run build:webpack",
+    "build": "npm run test && npm run clean && npm run build:webpack",
     "start": "parallelshell \"node devServer.js\" \"npm run test:watch\"",
-    "test": "karma start",
-    "test:watch": "npm test -- --watch"
+    "test": "karma start --single-run --reporters mocha --browsers PhantomJS",
+    "test:beforePullRequest": "karma start --single-run --reporters mocha --browsers Safari,Firefox,Chrome",
+    "test:watch": "karma start --no-single-run --browsers PhantomJS"
   },
   "devDependencies": {
     "autoprefixer": "^6.5.4",
@@ -20,9 +21,10 @@
     "babel-preset-es2015": "^6.16.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-1": "^6.16.0",
+    "babel-register": "^6.18.0",
     "chai": "^3.5.0",
     "css-loader": "^0.25.0",
-    "enzyme": "2.4.1",
+    "enzyme": "^2.6.0",
     "eslint": "^3.7.1",
     "eslint-loader": "^1.5.0",
     "eslint-plugin-react": "4.0.0",
@@ -31,6 +33,7 @@
     "express": "^4.13.4",
     "factory-girl": "^2.2.2",
     "file-loader": "^0.8.5",
+    "jsdom": "^9.8.3",
     "karma": "1.3.0",
     "karma-chai": "0.1.0",
     "karma-chai-plugins": "0.8.0",
@@ -39,7 +42,9 @@
     "karma-firefox-launcher": "1.0.0",
     "karma-mocha": "1.1.1",
     "karma-mocha-reporter": "2.2.0",
+    "karma-phantomjs-launcher": "^1.0.2",
     "karma-safari-launcher": "1.0.0",
+    "karma-sinon": "^1.0.5",
     "karma-sourcemap-loader": "0.3.7",
     "karma-webpack": "1.8.0",
     "less": "^2.6.1",
@@ -48,7 +53,10 @@
     "node-libs-browser": "^1.0.0",
     "node-sass": "^3.8.0",
     "parallelshell": "^2.0.0",
+    "phantomjs-polyfill": "^0.0.2",
+    "phantomjs-prebuilt": "^2.1.14",
     "postcss-loader": "^1.2.1",
+    "react-addons-test-utils": "^15.4.1",
     "react-transform-catch-errors": "^1.0.2",
     "react-transform-hmr": "^1.0.4",
     "redbox-react": "^1.3.1",
@@ -57,6 +65,7 @@
     "redux-devtools-log-monitor": "^1.0.4",
     "rimraf": "^2.5.2",
     "sass-loader": "^4.0.2",
+    "sinon": "^1.17.6",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "2.1.0-beta.25",
